change input element to button that clicks input to avoid strange rendering on mobile devices

--- a/views/css/sass/pages/_signup.scss
+++ b/views/css/sass/pages/_signup.scss
@@ -79,8 +79,7 @@
   }
   
   &__btn {
-    margin-top: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     background-color: $color-primary;
     
     @include respond(mobile) {
