--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1108,8 +1108,7 @@ input[type="date"]::-webkit-inner-spin-button {
 }
 
 .login__btn {
-  margin-top: 2rem;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   background-color: #20bf6b;
 }
 
@@ -1282,8 +1281,7 @@ input[type="date"]::-webkit-inner-spin-button {
 }
 
 .signup__btn {
-  margin-top: 2rem;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   background-color: #20bf6b;
 }
 
